# 1install

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build_log.txt  build_output.txt  build_v100_log.txt  help.txt  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
docs/: 01-executive-summary.md  02-fragmentation-crisis.md  03-context-detection-engine.md  04-unified-search-interface.md  05-transaction-orchestrator.md  06-path-management-shims.md  07-integrity-verification.md  08-engineering-roadmap.md  09-technical-stack.md  10-cybersecurity-review.md  11-architecture-review.md  VERSION_PLAN.md
python/oneinstall/: __init__.py
scripts/: install.ps1  install.sh
src/: doctor.rs  lib.rs  main.rs  telemetry.rs
src/backends/: apt.rs  brew.rs  cargo.rs  dnf.rs  flatpak.rs  git.rs  go.rs  mod.rs  npm.rs  pacman.rs  pip.rs  snap.rs  winget.rs
src/cli/: commands.rs  mod.rs  output.rs
src/config/: mod.rs  settings.rs
src/context/: mod.rs  os.rs
src/integrity/: mod.rs  verifier.rs
src/search/: aggregator.rs  mod.rs
src/shims/: generator.rs  mod.rs  registry.rs
