[package]
name = "oneinstall"
version = "0.5.0"
edition = "2021"
authors = ["Logan Bek"]
description = "Unified cross-platform package manager - install anything with one command"
repository = "https://github.com/loganbek/1install"
license = "MIT"
keywords = ["package-manager", "cli", "cross-platform", "winget", "apt", "brew"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "1i"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"], default-features = false, optional = true }

[features]
default = []
api = ["reqwest"]

[profile.release]
lto = true
strip = true
codegen-units = 1
